01.Bug On First Reloading FIX,02.Need to seperate subject and body on Mail-Preview FIXED.03.LongTxt Bug on Txt overFlow in MailPreview body.

--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -3,12 +3,14 @@
     justify-content: space-between;
     border-bottom: 1px solid #eceff1;
     box-shadow: inset 0 -1px 0 0 rgb(100 121 143 / 12%);
-    padding: 10px;
+    padding: 1vh;
     font-size: 0.875em;
 }
 
 .mail-preview:hover {
+    border-top: 1px solid whitesmoke;
     cursor: pointer;
+    box-shadow:  0px 4px 4px -2px rgb(0, 0, 0,0.25);
 }
 
 .mail-preview.read {
@@ -17,4 +19,11 @@
 
 .mail-preview.unread {
     font-weight: bold;
+}
+
+.mail-preview-body {
+    font-weight: lighter;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
